@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.1 to v2.4.2
+- Make screen wipe time independent of resolution
 - Fix problems with dehacked substitution of long strings
 
 Changes from v2.4.0 to v2.4.1
